@@ -28,7 +28,7 @@ static void setdb(char *str);
 
 bool ft_acctprint = FALSE, ft_noacctprint = FALSE, ft_listprint = FALSE;
 bool ft_nodesprint = FALSE, ft_optsprint = FALSE, ft_noinitprint = FALSE;
-bool ft_ngdebug = FALSE;
+bool ft_ngdebug = FALSE, ft_stricterror = FALSE;
 
 /* The user-supplied routine to query the values of variables. This
  * recognises the $&varname notation, and also searches the values of
@@ -291,6 +291,8 @@ cp_usrset(struct variable *var, bool isset)
         ft_optsprint = isset;
     } else if (eq(var->va_name, "strictnumparse")) {
         ft_strictnumparse = isset;
+    } else if (eq(var->va_name, "strict_errorhandling")) {
+        ft_stricterror = isset;
     } else if (eq(var->va_name, "rawfileprec")) {
         if ((var->va_type == CP_BOOL) && (isset == FALSE))
             raw_prec = -1;
