@@ -240,6 +240,7 @@ extern char *ft_setkwords[];
 extern struct line *inp_getopts(struct line *deck);
 extern struct line *inp_getoptsc(char *in_line, struct line *com_options);
 extern bool ft_ngdebug;
+extern bool ft_stricterror;
 
 /* parse.c */
 
